--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -6,6 +6,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HEllo world</h1>
+    <form id="form">
+        <input type="text" name="message"/>
+    </form>
 </body>
+
+<script>
+    let url = 'ws://${window.location.host}/ws/socket-server/';
+
+    const chatSocket = new WebSocket(url);
+
+    chatSocket.onmessage = function(e) {
+        let data = JSON.parse(e.data)
+        console.log(data)
+    }
+
+    let form = document.getElementById("form");
+    form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        let message = e.target.message.value; // message text
+        chatSocket.send(JSON.stringify({
+            'message': message,
+        }))
+        form.reset()
+    })
+
+</script>
 </html>
+
