allt funkar och vi tar emot bilden som base64, behöver bara prasea

--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -3,30 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chat app</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <form id="form">
-        <input type="text" name="message"/>
-    </form>
+    <div class="container mt-5">
+        <div class="card my-4">
+            <div class="card-body">
+                <div id="messages"></div>
+            </div>
+        </div>  
 
-    <div id="messages"></div>
+        <form id="form">
+            <input type="text" name="message"/>
+        </form>  
+        <input type="file" id="fileInput" accept="image/jpeg, image/png" style="display: none;">
+        <button id="uploadButton">Upload Image</button>
+    </div>
 </body>
 
 <script type="text/javascript">
     let url = 'ws://localhost:8000/ws/socket-server/';
 
+    let ID = Math.floor(Math.random() * 10000)
+
     const chatSocket = new WebSocket(url);
 
     chatSocket.onmessage = function(e) {
+
         let data = JSON.parse(e.data)
         console.log(data)
 
-        if (data.type === 'chat') {
+        if (data.type === 'chat_messagechat') {
             let messages = document.getElementById("messages");
             messages.insertAdjacentHTML('beforeend', `<div>
                     <p>${data.message}</p>
+                    <p>user${data.id}</p>
                 </div>`)
+        }
+
+        else if (data.type === 'chat_imagechat') {
+            console.log(e)
         }
     }
 
@@ -35,10 +54,36 @@
         e.preventDefault();
         let message = e.target.message.value; // message text
         chatSocket.send(JSON.stringify({
+            'type':'text',
             'message': message,
+            'id':ID,
         }))
         form.reset()
     })
+
+    // listens for button press -> triger file input
+    document.getElementById('uploadButton').addEventListener('click', function() {
+        document.getElementById('fileInput').click();
+    });
+
+    // gets triggered when button is pressed
+    chatSocket.onopen = function() {
+        const fileInput = document.getElementById('fileInput');
+        fileInput.onchange = function() {
+            const file = fileInput.files[0];
+            const reader = new FileReader();
+            reader.onload = function(event) {
+                const base64String = event.target.result.split(',')[1]; // Get base64 part
+                console.log(base64String)
+                chatSocket.send(JSON.stringify({
+                    'type':'image',
+                    'image': base64String,
+                    'id':ID,
+                }));
+            };
+            reader.readAsDataURL(file); // Read the file as a Data URL
+        };
+    };
 
 </script>
 </html>
