--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,10 +8,12 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- css -->
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
     <div class="container mt-5">
-        <div class="card my-4" style="flex-grow: 1;">
+        <div class="card my-4">
             <div class="card-body">
                 <div id="messages"></div>
             </div>
@@ -19,15 +22,15 @@
         <form id="form">
             <input type="text" name="message"/>
         </form>  
-        <div class="continer" style="display: flex; align-items: center; justify-content: space-between; border-top: 1px solid #ccc; padding: 10px; margin-top: auto;">
-            <input type="file" id="fileInput" class="form-control" accept="image/jpeg, image/png" style="flex: 1; margin-right: 10px; padding: 5px; border: 1px solid #ccc; border-radius: 4px; display: none;">
+        <div class="continer">
+            <input type="file" id="fileInput" class="form-control" accept="image/jpeg, image/png">
             <button　type="button" class="btn btn-primary" id="uploadButton">Upload Image</button>
         </div>
     </div>
 </body>
 
 <script type="text/javascript">
-    let url = 'ws://localhost:8000/ws/socket-server/';
+    let url = 'ws://localhost:8000/ws/socket-server/'; // 'wss://347c-82-209-141-255.ngrok-free.app/ws/socket-server/'
 
     let ID = Math.floor(Math.random() * 10000)
 
@@ -39,10 +42,9 @@
         console.log(data)
 
         if (data.type === 'chat_messagechat') {
-            let messages = document.getElementById("messages");
+            let messages = document.getElementById('messages');
             messages.insertAdjacentHTML('beforeend', `<div>
                     <p>user${data.id}: ${data.message}</p>
-
                 </div>`)
         }
 
@@ -50,7 +52,11 @@
             let image = data.image;
             const img = document.createElement('img');
             img.src = image;
-            document.getElementById('messages').appendChild(img);
+            let messages = document.getElementById('messages');
+            messages.insertAdjacentHTML('beforeend', `
+            <p>user${data.id}:</p>
+            `)
+            messages.appendChild(img);
         }
     }
 
